[package]
authors = ["vyfor"]
categories = ["command-line-utilities", "multimedia", "multimedia::audio"]
description = "Yandex Music for the terminal"
edition = "2021"
keywords = ["yandex", "music", "tui", "cli", "audio-player"]
license = "Apache-2.0"
name = "yatui"
repository = "https://github.com/vyfor/yatui"
version = "0.0.1"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
yandex-music = "0.2.5"
reqwest = "0.12"
ratatui = "0.27"

stream-download = "0.5"
url = "2.5"
cpal = "0.15"
symphonia = { version = "0.5.4", features = ["mp3", "aac"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
dotenv = "0.15"
